// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render cells as converted string with nbsp 1`] = `
<div
  className="mfui-beta-table mfui-beta-table_min-cell-size_small custom-class"
>
  <div
    className="mfui-beta-table__scroll"
    onScroll={[Function]}
  >
    <table
      className="mfui-beta-table__table"
    >
      <tbody>
        <tr
          className="mfui-beta-table__row mfui-beta-table__row_head"
          key=".0"
        >
          <td
            className="mfui-beta-table__cell"
            key=".0"
          >
            Заголовок 1
          </td>
          <td
            className="mfui-beta-table__cell"
            key=".1"
          >
            Заголовок 2
          </td>
        </tr>
        <tr
          className="mfui-beta-table__row"
          key=".1"
        >
          <td
            className="mfui-beta-table__cell"
            key=".0"
          >
            Текст 1
          </td>
          <td
            className="mfui-beta-table__cell"
            key=".1"
          >
            Текст 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Table /> should render cells as react node 1`] = `
<div
  className="mfui-beta-table mfui-beta-table_min-cell-size_small custom-class"
>
  <div
    className="mfui-beta-table__scroll"
    onScroll={[Function]}
  >
    <table
      className="mfui-beta-table__table"
    >
      <tbody>
        <tr
          className="mfui-beta-table__row mfui-beta-table__row_head"
          key=".0"
        >
          <td
            className="mfui-beta-table__cell"
            key=".0"
          >
            <span>
              Заголовок 1
            </span>
          </td>
          <td
            className="mfui-beta-table__cell"
            key=".1"
          >
            <span>
              Заголовок 2
            </span>
          </td>
        </tr>
        <tr
          className="mfui-beta-table__row"
          key=".1"
        >
          <td
            className="mfui-beta-table__cell"
            key=".0"
          >
            <span>
              Текст 2
            </span>
          </td>
          <td
            className="mfui-beta-table__cell"
            key=".1"
          >
            <span>
              Текст 2
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Table /> should render with default props 1`] = `
<div
  className="mfui-beta-table mfui-beta-table_fix-column mfui-beta-table_min-cell-size_large"
>
  <div
    className="mfui-beta-table__scroll"
    onScroll={[Function]}
  >
    <table
      className="mfui-beta-table__table"
    >
      <tbody>
        <tr
          className="mfui-beta-table__row mfui-beta-table__row_head"
          key=".0"
        >
          <td
            className="mfui-beta-table__cell"
            key=".0"
          >
            Заголовок 1
          </td>
          <td
            className="mfui-beta-table__cell"
            key=".1"
          >
            Заголовок 2
          </td>
        </tr>
        <tr
          className="mfui-beta-table__row"
          key=".1"
        >
          <td
            className="mfui-beta-table__cell"
            key=".0"
          >
            Текст 1
          </td>
          <td
            className="mfui-beta-table__cell"
            key=".1"
          >
            Текст 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Table /> should render with props 1`] = `
<div
  className="mfui-beta-table mfui-beta-table_min-cell-size_small custom-class"
>
  <div
    className="mfui-beta-table__scroll"
    onScroll={[Function]}
  >
    <table
      className="mfui-beta-table__table"
    >
      <tbody>
        <tr
          className="mfui-beta-table__row mfui-beta-table__row_head"
          key=".0"
        >
          <td
            className="mfui-beta-table__cell"
            key=".0"
          >
            Заголовок 1
          </td>
          <td
            className="mfui-beta-table__cell"
            key=".1"
          >
            Заголовок 2
          </td>
        </tr>
        <tr
          className="mfui-beta-table__row"
          key=".1"
        >
          <td
            className="mfui-beta-table__cell"
            key=".0"
          >
            Текст 1
          </td>
          <td
            className="mfui-beta-table__cell"
            key=".1"
          >
            Текст 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
